[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ratelimit-redis"
version = "0.1.0"
description = "Redis-backed token-bucket rate limiter"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["redis>=5.0"]

[project.optional-dependencies]
examples = ["flask>=3.0"]

[tool.setuptools.packages.find]
where = ["src"]
